[gd_scene load_steps=18 format=2]

[ext_resource path="res://Objects/Tools/Box.gd" type="Script" id=1]
[ext_resource path="res://Arts/Objects/front_of_box.png" type="Texture" id=2]
[ext_resource path="res://Arts/Objects/back_of_box.png" type="Texture" id=3]
[ext_resource path="res://Arts/Scene/conveyer_belt.png" type="Texture" id=4]
[ext_resource path="res://Objects/Tools/misc/ButtonCoolDown.gd" type="Script" id=5]
[ext_resource path="res://Arts/ConveyorBelt.shader" type="Shader" id=6]
[ext_resource path="res://Arts/Objects/tall_button_base.png" type="Texture" id=7]
[ext_resource path="res://Arts/Objects/tall_button_button.png" type="Texture" id=8]
[ext_resource path="res://Arts/Font/UI_font_small.tres" type="DynamicFont" id=9]
[ext_resource path="res://Arts/Objects/tall_button_button_pressed.png" type="Texture" id=10]
[ext_resource path="res://Arts/Objects/progress_up.tres" type="StyleBox" id=11]
[ext_resource path="res://Arts/Objects/progress_down.tres" type="StyleBox" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 104, 96 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Animation" id=3]
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("boxarea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( -900, 0 ), Vector2( -900, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1000, 0 ), Vector2( -1000, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 1.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("boxarea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -900, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1000, 0 ), Vector2( -1000, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 6 )
shader_param/speed = 0.0

[node name="Box" type="Area2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1000, 0 )
shape = SubResource( 1 )

[node name="Button" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Button"]
margin_left = -352.0
margin_top = -51.0
margin_right = -152.0
margin_bottom = 59.0
mouse_filter = 2
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Button"]
margin_left = -352.0
margin_top = -48.0
margin_right = -152.0
margin_bottom = 62.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 10 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Button/TextureButton"]
wait_time = 3.0
one_shot = true

[node name="ProgressBarDown" type="ProgressBar" parent="Button"]
self_modulate = Color( 0.858824, 0.858824, 0.858824, 1 )
margin_left = -352.0
margin_top = -48.0
margin_right = -152.0
margin_bottom = 62.0
rect_min_size = Vector2( 200, 110 )
mouse_filter = 2
custom_styles/fg = ExtResource( 12 )
custom_styles/bg = SubResource( 2 )
max_value = 300.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarUp" type="ProgressBar" parent="Button"]
self_modulate = Color( 0.858824, 0.858824, 0.858824, 1 )
margin_left = -352.0
margin_top = -48.0
margin_right = -152.0
margin_bottom = 62.0
rect_min_size = Vector2( 200, 110 )
mouse_filter = 2
custom_styles/fg = ExtResource( 11 )
custom_styles/bg = SubResource( 2 )
max_value = 300.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Button"]
margin_left = -318.747
margin_top = -50.6606
margin_right = -261.747
margin_bottom = 19.3394
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color_shadow = Color( 0.658824, 0.658824, 0.658824, 1 )
text = "x 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boxarea" type="Node2D" parent="."]
position = Vector2( -900, 0 )

[node name="back_of_box" type="Sprite" parent="boxarea"]
scale = Vector2( 0.259917, 0.239654 )
texture = ExtResource( 3 )

[node name="Sushi_Sprites" type="Node2D" parent="boxarea"]

[node name="front_of_box" type="Sprite" parent="boxarea"]
scale = Vector2( 0.259917, 0.239654 )
z_index = 1
texture = ExtResource( 2 )

[node name="Ani" type="AnimationPlayer" parent="."]
anims/MoveIn = SubResource( 3 )
anims/Output = SubResource( 4 )

[node name="conveyer_belt" type="Sprite" parent="."]
visible = false
material = SubResource( 5 )
position = Vector2( -437.595, 46.6674 )
scale = Vector2( 0.589582, 0.915363 )
z_index = -3
texture = ExtResource( 4 )

[node name="Timeout" type="Timer" parent="."]
wait_time = 0.1

[node name="Timing" type="AnimationPlayer" parent="."]
[connection signal="button_down" from="Button/TextureButton" to="Button/TextureButton" method="_on_TextureButton_button_down"]
[connection signal="button_down" from="Button/TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="pressed" from="Button/TextureButton" to="Button/TextureButton" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Button/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Button/TextureButton/Timer" to="Button/TextureButton" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Ani" to="." method="_on_Ani_animation_finished"]
[connection signal="timeout" from="Timeout" to="." method="_on_Timeout_timeout"]
